--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
     "playwright-chromium": "^1.16.3"
   }
 }
