--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon ./src/server.js",
-    "start": "node ./src/server.js"
+    "start": "node ./srce/server.js"
   },
   "keywords": [],
   "author": "",
